--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --black: #070707;
     --white: #FFFFFF;
     --grayF7: #F7F7F7;
-    --orange: #FF640D;
+    --orange: #C3161A;
     --halvar-bd: 'Halvar Breitschrift Bd', sans-serif;
     --pragma-lt: 'Pragmatica-Light', sans-serif;
     --pragma-md: 'Pragmatica-Medium', sans-serif;
@@ -78,7 +78,7 @@ input::-webkit-inner-spin-button {
 .btn__orange:active,
 .btn__orange:hover {
     color: var(--white);
-    background: linear-gradient(90deg, #FF640D 0%, #F8A70C 100%);
+    background: linear-gradient(90deg, #C3161A 0%, #F8A70C 100%);
 }
 .btn__gray {
     background: var(--grayF7);
@@ -198,7 +198,7 @@ input::-webkit-inner-spin-button {
     padding-left: 0;
 }
 .calculator__warning {
-    color: #FF640D;
+    color: #C3161A;
     padding: 30px 0 0 0;
 }
 .calculator__info {
@@ -502,7 +502,7 @@ input::-webkit-inner-spin-button {
 .cta__btn:not(:disabled):active,
 .cta__btn:not(:disabled):hover {
     color: var(--white);
-    background: linear-gradient(90deg, #FF640D 0%, #F8A70C 100%);
+    background: linear-gradient(90deg, #C3161A 0%, #F8A70C 100%);
 }
 /* Footer */
 .footer {
